--- a/test/index.html
+++ b/test/index.html
@@ -4,8 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <script src="../svelte-app/dist/bundle.js"></script>
 </head>
 <body>
-  <script src="../svelte-app/dist/bundle.js"></script>
+  <div id="app">
+
+  </div>
+  <script>
+    const { IconLink } = window['svelte-ui']
+    const myComp = new IconLink({
+      target: document.body,
+      props: {
+        icon: '🚀',
+        link: 'https://qinzhen001.github.io/2020/10/24/package%E9%85%8D%E7%BD%AE%E7%9B%B8%E5%85%B3-myblog/#exports'
+      }
+    })
+  </script>
 </body>
 </html>
